# python-openai

./: 01-basic.ipynb  pyproject.toml
